# z-exec

./: Cargo.toml
documentation/: readme.md
examples/: env.json  env.txt  hello.json  hello.txt  ls-proc-fd.json  ls-proc-fd.txt  lsof.json  true.json  true.txt
scripts/: z-run
sources/: Cargo.toml  adapters.rs  bin.rs  cmd_client.rs  cmd_execute.rs  cmd_main.rs  cmd_server.rs  executer.rs  lib.rs  macros.rs  main.rs  objects.rs  parser.rs  prelude.rs  rpc.rs  rpc_objects.rs  serialization.rs  server.rs  settings.rs  tools.rs
