
[package]
name = "z-exec"
version = "0.0.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2018"

[features]
default = []

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
erased-serde = "*"
ron = "*"
libc = "*"
nix = "*"
crossbeam = "*"
argparse = "*"
scopeguard = "*"
signal-hook = "*"
lazy_static = "*"
socket2 = { version = "*", features = ["unix"] }
bytes = "*"
owning_ref = "*"

[[bin]]
name = "z-exec"
path = "./bin.rs"

[lib]
name = "zexec"
path = "./lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
panic = "abort"

